# kvk

./: .gitignore  LICENSE  meson.build
.cache/clangd/index/: Metal_Blit.h.968CE825AA686C21.idx  SDL.c.0252EC42E528CD9E.idx  SDL.h.716FF179F7001821.idx  SDL_RLEaccel.c.458157A0E7551967.idx  SDL_RLEaccel_c.h.6A29B5C22369147D.idx  SDL_appid.c.37780AD210E3AB17.idx  SDL_appid.h.905070671ADB4CEF.idx  SDL_assert.c.FF1355942E721EB6.idx  SDL_assert.h.E0F7860E68793C90.idx  SDL_assert_c.h.B633644189FFC5ED.idx  SDL_asyncio.c.19AD735AD69549F1.idx  SDL_asyncio.h.931537C0797CEE27.idx  SDL_asyncio_c.h.EED9A84803DFA3E1.idx  SDL_asyncio_generic.c.387C466A83F38156.idx  SDL_atomic.c.6346973BC244C34C.idx  SDL_atomic.h.C02B8FB1E1DFC53D.idx  SDL_audio.c.80FEE622BA239083.idx  SDL_audio.h.E2D004B3E959303B.idx  SDL_audio_c.h.D88A642C511A1ACF.idx  SDL_audio_channel_converters.h.B662DCA7BFBCFBF6.idx  SDL_audiocvt.c.A729B238E6593D10.idx  SDL_audiodev.c.48189A20522AE38A.idx  SDL_audioqueue.c.1C65667567A9E45C.idx  SDL_audioqueue.h.E96AD6E6CB4FA6A7.idx  SDL_audioresample.c.B67814BC4EDD239E.idx  SDL_audioresample.h.79D44E631DB50B0C.idx  SDL_audiotypecvt.c.3DE1B7EE3E97C8C4.idx  SDL_begin_code.h.33629A87C2462073.idx  SDL_bits.h.249DCF8A4AA2A35C.idx  SDL_blendfillrect.c.D06E0258D8252484.idx  SDL_blendfillrect.h.1FDF984BCE8CCC57.idx  SDL_blendline.c.A0B698AE2849B8E4.idx  SDL_blendline.h.F407FF3B49666E4F.idx  SDL_blendmode.h.6CE31BC049FEDC6C.idx  SDL_blendpoint.c.1B220A223FDA8A9E.idx  SDL_blendpoint.h.BB88C0E571C03C2C.idx  SDL_blit.c.166C2188191C2D06.idx  SDL_blit.h.777FC5078D424DA4.idx  SDL_blit_0.c.964F65F3995709F7.idx  SDL_blit_1.c.A92B12D7C3546881.idx  (+421 more)
demo/: cellular_automata.hlsl  demo.cpp
include/: kvk.h
src/: kvk.cpp  kvk_util.inl
subprojects/SDL3-3.2.10/: .meson-subproject-wrap-hash.txt
